ビルドタスクと文書の整備
git-svn-id: http://svn.coderepos.org/share/lang/ruby/ruby-committers@33962 d0d07461-0603-4401-acd4-de1884942a52

--- a/ruby-committers.html.erb
+++ b/ruby-committers.html.erb
@@ -5,8 +5,7 @@
 <% require 'open-uri' -%>
 <% include ERB::Util %>
 <% 
-  $stderr.print 'type your amazon associate id: '
-  key = $stdin.gets.chomp
+  key = YAML.load_file('config.yml')['aws-key']
   configure_ecs key
 %>
 <% committers = YAML.load_file('ruby-committers.yml') -%>
