--- a/ruby-committers.html.erb
+++ b/ruby-committers.html.erb
@@ -1,6 +1,6 @@
 <%# -*- coding: UTF-8 -*-%>
 <% require 'yaml' -%>
-<% require 'amazon-image-fetcher' -%>
+<% require './amazon-image-fetcher' -%>
 <% require 'image_size' -%>
 <% require 'open-uri' -%>
 <% include ERB::Util %>
