--- a/ruby-committers.html.erb
+++ b/ruby-committers.html.erb
@@ -5,8 +5,8 @@
 <% require 'open-uri' -%>
 <% include ERB::Util %>
 <% 
-  key = YAML.load_file('config.yml')['aws-key']
-  configure_ecs key
+  config = YAML.load_file('config.yml')
+  configure_ecs config['aws-key'], config['secret-key']
 %>
 <% committers = YAML.load_file('ruby-committers.yml') -%>
 <!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.1//EN"
